# dog_robot

./: .gitignore
docs/superpowers/plans/: 2026-05-15-control-pkg-plan.md  2026-05-15-urdf-export-plan.md
docs/superpowers/specs/: 2026-05-15-control-pkg-design.md  2026-05-15-urdf-export-design.md
dog_robot_ws/: README.md
dog_robot_ws/docs/superpowers/plans/: 2026-05-17-champ-integration-STATUS.md  2026-05-17-champ-integration.md  2026-05-23-dh-convention.md  2026-05-24-kinematics-viz.md  2026-05-24-walking-cmd-vel.md  2026-05-25-dh-mesh-export.md  2026-05-26-joint-frame-export.md  2026-06-01-body-height-plan.md  2026-06-10-rear-z-sit-pose-plan.md
dog_robot_ws/docs/superpowers/specs/: 2026-05-17-champ-integration-design.md  2026-05-23-dh-convention-design.md  2026-05-24-kinematics-viz-design.md  2026-05-24-walking-cmd-vel-design.md  2026-05-25-dh-mesh-export-design.md  2026-05-26-joint-frame-export-design.md  (+4 more)
dog_robot_ws/scripts/: dog_kill_all.sh  dog_relaunch_kinematic.sh
dog_robot_ws/src/dog_gait/: pyproject.toml
dog_robot_ws/src/dog_gait/dog_gait/: controller.py  foot_planner.py  state_machine.py
dog_robot_ws/src/dog_gait/tests/: test_controller.py  test_foot_planner.py  test_state_machine.py
dog_robot_ws/src/dog_kinematics/: pyproject.toml
dog_robot_ws/src/dog_kinematics/dog_kinematics/: body.py  constants.py  leg.py  solver.py
dog_robot_ws/src/dog_kinematics/tests/: test_body.py  test_constants.py  test_leg.py  test_solver.py
dog_robot_ws/src/dog_robot_bringup/: CMakeLists.txt  package.xml
dog_robot_ws/src/dog_robot_config/: CMakeLists.txt  package.xml
dog_robot_ws/src/dog_robot_config/config/gait/: gait.yaml
dog_robot_ws/src/dog_robot_config/config/joints/: joints.yaml
dog_robot_ws/src/dog_robot_config/config/links/: links.yaml
dog_robot_ws/src/dog_robot_config/config/ros_control/: ros_control.yaml
dog_robot_ws/src/dog_robot_config/launch/: bringup.launch.py  gazebo.launch.py
dog_robot_ws/src/dog_robot_config/worlds/: simple.world
dog_robot_ws/src/dog_robot_control/: package.xml  setup.cfg  setup.py
dog_robot_ws/src/dog_robot_control/config/: controller_params.yaml  dh_params.yaml  walker_params.yaml
dog_robot_ws/src/dog_robot_control/dog_robot_control/: controller_node.py  kinematics_dh.py  leg_config.py  stand_controller.py  teleop_keyboard.py  walker_controller.py
dog_robot_ws/src/dog_robot_control/dog_robot_control/gait/: body_controller.py  gait_config.py  leg_controller.py  phase_generator.py  trajectory_planner.py
dog_robot_ws/src/dog_robot_control/launch/: controller.launch.py  full_sim.launch.py  kinematic.launch.py  stand.launch.py  walk.launch.py
dog_robot_ws/src/dog_robot_control/test/: test_body_controller.py  test_kinematics_dh.py  test_leg_controller.py  test_node_integration.py  test_phase_generator.py  test_sim_smoke.py  test_trajectory_planner.py  test_urdf_dh_consistency.py  test_walker_integration.py
dog_robot_ws/src/dog_robot_description/: CMakeLists.txt  README.md  package.xml
dog_robot_ws/src/dog_robot_description/config/: dh_link_placements.yaml  joint_frames.yaml  link_params.yaml  ros2_controllers.yaml  urdf_joints.yaml
dog_robot_ws/src/dog_robot_description/launch/: display.launch.py  gazebo.launch.py
dog_robot_ws/src/dog_robot_description/meshes/collision/: BL_foot_link.stl  BL_hip_link.stl  BL_shank_link.stl  BL_thigh_link.stl  BR_foot_link.stl  BR_hip_link.stl  BR_shank_link.stl  BR_thigh_link.stl  FL_foot_link.stl  FL_hip_link.stl  FL_shank_link.stl  FL_thigh_link.stl  FR_foot_link.stl  FR_hip_link.stl  FR_shank_link.stl  FR_thigh_link.stl  base_link.stl
dog_robot_ws/src/dog_robot_description/meshes/visual/: BL_hip_link.stl  BL_shank_link.stl  BL_thigh_link.stl  BR_hip_link.stl  BR_shank_link.stl  BR_thigh_link.stl  FL_hip_link.stl  FL_shank_link.stl  FL_thigh_link.stl  FR_hip_link.stl  FR_shank_link.stl  FR_thigh_link.stl  base_link.stl
dog_robot_ws/src/dog_robot_description/meshes/visual_dh/: BL_foot_link.stl  BL_hip_link.stl  BL_shank_link.stl  BL_thigh_link.stl  BR_foot_link.stl  BR_hip_link.stl  BR_shank_link.stl  BR_thigh_link.stl  FL_foot_link.stl  FL_hip_link.stl  FL_shank_link.stl  FL_thigh_link.stl  FR_foot_link.stl  FR_hip_link.stl  FR_shank_link.stl  FR_thigh_link.stl  base_link.stl
dog_robot_ws/src/dog_robot_description/scripts/: bake_meshes_to_link_frame.py  compute_dh_lengths.py  compute_visual_compensation.py  derive_dh_frames.py  derive_joint_frames.py  export_dh_links_from_freecad.py
dog_robot_ws/src/dog_robot_description/test/: test_urdf.py
dog_robot_ws/src/dog_robot_description/urdf/: dog_robot.urdf.xacro  gazebo.xacro  inertial.xacro  leg.xacro  materials.xacro  ros2_control.xacro
dog_robot_ws/src/dog_robot_kinematic_viz/: package.xml  setup.cfg  setup.py
dog_robot_ws/src/dog_robot_kinematic_viz/config/: kinematic_params.yaml
dog_robot_ws/src/dog_robot_kinematic_viz/dog_robot_kinematic_viz/: __init__.py  body_commander.py  foot_target.py  foot_trail.py  gui_teleop.py  kinematic_node.py  leg_driver.py  leg_geometry.py  teleop_keyboard.py
dog_robot_ws/src/dog_robot_kinematic_viz/launch/: kinematic.launch.py  kinematic_gui.launch.py  kinematic_single_leg.launch.py  kinematic_teleop.launch.py
dog_robot_ws/src/dog_robot_kinematic_viz/rviz/: kinematic.rviz
dog_robot_ws/src/dog_robot_kinematic_viz/test/: test_body_commander.py  test_foot_target.py  test_foot_trail.py  test_kinematic_node_smoke.py  test_leg_driver.py  test_leg_geometry.py  test_teleop_keyboard.py
dog_robot_ws/src/dog_robot_kinematics/: package.xml  setup.cfg  setup.py
dog_robot_ws/src/dog_robot_kinematics/config/: dh_params.yaml
dog_robot_ws/src/dog_robot_kinematics/dog_robot_kinematics/: __init__.py  kinematics_dh.py  kinematics_link.py
dog_robot_ws/src/dog_robot_kinematics/test/: test_derive_joint_frames.py  test_dh_derivation.py  test_kinematics_dh.py  test_kinematics_link.py  test_urdf_dh_consistency.py  test_urdf_link_consistency.py
scripts/: README.md  compute_joints.py  export_links_from_freecad.py  find_part3_joints.py  probe_head_target.py  probe_selected_joint.py
(+3 files in other folders)
