[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dog_kinematics"
version = "0.1.0"
description = "Pure-Python kinematics for the 12-DOF dog robot"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["dog_kinematics*"]
