<?xml version="1.0"?>
<package format="3">
  <name>dog_robot_config</name>
  <version>0.1.0</version>
  <description>CHAMP config for the dog_robot custom quadruped</description>
  <maintainer email="nguyenvd11@fpt.com">nguyenvd11</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>champ_base</exec_depend>
  <exec_depend>champ_bringup</exec_depend>
  <exec_depend>champ_gazebo</exec_depend>
  <exec_depend>dog_robot_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
