<?xml version="1.0"?>
<package format="3">
  <name>dog_robot_control</name>
  <version>0.1.0</version>
  <description>ROS2 controller node for the 12-DOF dog robot.</description>
  <maintainer email="nguyenvd11@fpt.com">nguyenvd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>dog_robot_description</exec_depend>
  <exec_depend>dog_robot_kinematics</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
