<?xml version="1.0"?>
<package format="3">
  <name>dog_robot_kinematics</name>
  <version>0.1.0</version>
  <description>Pure-Python DH kinematics + leg config for the 12-DOF dog robot, plus a Gazebo-free RViz visualization rig.</description>
  <maintainer email="nguyenvd11@fpt.com">nguyenvd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
